--- a/client/admin/package.json
+++ b/client/admin/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.0.0",
     "css-loader": "^0.28.10",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^1.9.1",
