--- a/client/user/package.json
+++ b/client/user/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.28.10",
     "d3": "^5.4.0",
     "file-loader": "^1.1.11",
+    "file-saver": "^1.3.8",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^1.9.1",
