--- a/client/user/package.json
+++ b/client/user/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^1.3.8",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "intro.js": "^2.9.3",
     "jquery": "^1.9.1",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
